# SIMD-Math

./: .gitignore  CMakeLists.txt  README.md
include/: simd-math.hpp
include/linear_algebra/: vector4.hpp
include/sdmath/linear_algebra/: matrix4x4.hpp  vector4.hpp
src/linear_algebra/: matrix4x4.cpp  vector4.cpp
test/: CMakeLists.txt
test/perf/: CMakeLists.txt  perf_vector4.cpp
test/unit/: CMakeLists.txt  matrix4x4.cpp  vector4.cpp
